--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginEnd="4dp">
 
     <ImageView
-        android:id="@+id/item_profileImg"
+        android:id="@+id/item_avatar_url"
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_marginBottom="4dp"
@@ -29,17 +29,17 @@
         android:layout_marginLeft="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/item_profileImg"
-        app:layout_constraintTop_toTopOf="@+id/item_profileImg"
+        app:layout_constraintStart_toEndOf="@+id/item_avatar_url"
+        app:layout_constraintTop_toTopOf="@+id/item_avatar_url"
         tools:text="repo title"
         android:layout_marginStart="16dp" />
 
     <TextView
-        android:id="@+id/item_description"
+        android:id="@+id/item_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_profileImg"
+        app:layout_constraintBottom_toBottomOf="@+id/item_avatar_url"
         app:layout_constraintStart_toStartOf="@+id/item_title"
         android:text="@string/description"/>
 
